<resources>
    <string name="app_name">Plan It</string>
    <string name="plan_it_by_john_oye">PLAN IT</string>
    <string name="add_button">Add Button</string>
    <string name="clock_icon">Clock Icon</string>
    <string name="_0">0.</string>
    <string name="task_1">Task 1</string>
    <string name="see_more">See More</string>
    <string name="tasks">TASKS</string>
    <string name="enter_task_name">Enter Task Name</string>
    <string name="enter_description">Enter Description</string>
    <string name="no_tasks_available">No tasks available</string>
    <string name="view_details">View Details</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="lead_developer">Lead Developer</string>
    <string name="john_oye">John Oye</string>
    <string name="lead_developer_john_oye">Lead Developer : John Oye</string>
    <string name="about_developer">About Developer</string>
    <string name="exit">Exit</string>
    <string name="about_me">I am a 13 years old native app and web developer. I have been coding for 2 years.
        <br/>
        <br/>I make Android Applications and Web Designs.
        <br/>
    </string>
    <string name="plan_it_about_me">PLAN IT - About Me</string>
    <string name="delete_task">Delete Task</string>
    <string name="title_activity_splash">Splash</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="plan_your_everyday">Plan Your Everyday</string>
    <string name="by_john_oye">BY JOHN OYE</string>
    <string name="t_name">Task Name</string>
    <string name="enter_task_time_hour_minute_second">Enter Task Time (hour:minute:second)</string>
    <string name="save">Save</string>
    <string name="task_details">Task Details</string>
    <string name="delete">Delete</string>
</resources>