<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/rl"
>
<Toolbar android:layout_width="match_parent" android:layout_height="wrap_content"
         android:titleTextColor="@color/white"
         android:title="@string/plan_it_by_john_oye"
         android:titleTextAppearance="@android:style/TextAppearance.Large"
         android:elevation="10dp"
         android:id="@+id/tb"
         android:background="@drawable/tb"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
         />
    <TextView android:id="@+id/title" android:layout_width="wrap_content" android:layout_height="wrap_content"
    style="@android:style/TextAppearance.DeviceDefault.Large"
    android:layout_below="@id/tb"
    android:text="@string/tasks"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="7dp"/>
    <ScrollView android:id="@+id/scrl" android:layout_centerHorizontal="true" android:layout_below="@id/title"  android:layout_width="wrap_content" android:layout_height="wrap_content">
    <TextView android:id="@+id/subtitle" android:layout_width="wrap_content" android:layout_height="wrap_content"
    style="@android:style/TextAppearance.DeviceDefault.Large"
    android:text="@string/no_tasks_available"
    
    android:layout_marginBottom="7dp"/>
    </ScrollView>
    <ListView android:id="@+id/lv"
	android:layout_below="@id/title" 
	android:layout_width="match_parent" 
	android:layout_height="match_parent"
	android:visibility="gone"/>
 <include
         android:layout_below="@id/scrl"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         layout="@layout/a4"
         android:layout_margin="10dp"
     />
<FrameLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_alignParentEnd="true"
android:background="@drawable/button"
             android:id="@+id/button"
android:padding="22dp"
android:layout_margin="13dp"
android:elevation="10dp">
    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/add_button"
    android:src="@drawable/ic_baseline_add_24"/>
</FrameLayout>
</RelativeLayout>