<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:paddingStart="5dp"
              android:paddingEnd="5dp"
              android:paddingTop="10dp"
              android:elevation="10dp"
              android:paddingBottom="10dp">
<RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
    <ImageView android:id="@+id/imv1" android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:contentDescription="@string/clock_icon"
    android:src="@drawable/ic_baseline_access_time_24"
    />
    <TextView android:id="@+id/task" android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/task_1" android:textStyle="bold"
              android:textSize="20sp"

              android:maxHeight="48dp"
              android:layout_toEndOf="@id/imv1"
              android:layout_marginStart="5dp"
              android:layout_marginTop="4.9dp"
              android:ellipsize="end"
              android:textColor="@color/black"/>
   <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
   android:contentDescription="@string/see_more"
   android:src="@drawable/baseline_more_horiz_24"
   android:layout_alignParentEnd="true"
   android:id="@+id/imv2"
   android:layout_marginTop="6.5dp"
     style="?android:selectableItemBackgroundBorderless"
   android:layout_marginEnd="5dp"/>


</RelativeLayout>
</LinearLayout>