<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:padding="20dp">

    <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/txt1"
              android:inputType="textAutoCorrect" android:importantForAutofill="no"
              android:hint="@string/enter_task_name" android:singleLine="true" android:selectAllOnFocus="true"
              android:focusable="true"
              android:nextFocusDown="@id/txt2"
              android:textColor="@color/black"
              android:layout_marginTop="10dp"
     />
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/txt2"
              android:inputType="textAutoCorrect" android:importantForAutofill="no"
              android:layout_below="@id/txt1"
              android:layout_marginTop="30dp"
              android:textColor="@color/black"
              android:hint="@string/enter_task_time_hour_minute_second" android:singleLine="true" android:selectAllOnFocus="true"
    />

    <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/txt3"
              android:inputType="textAutoCorrect" android:importantForAutofill="no"
              android:layout_below="@id/txt2"
              android:layout_marginTop="30dp"
              android:textColor="@color/black"
              android:hint="@string/enter_description" android:singleLine="true" android:selectAllOnFocus="true"
              />
</RelativeLayout>