<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
>
    <Toolbar android:layout_width="match_parent" android:layout_height="wrap_content"
             android:id="@+id/tb2"
             android:background="@color/light_blue"
             android:titleTextColor="@color/black"

             android:paddingStart="10dp"
             android:paddingEnd="10dp"
             android:elevation="10dp"/>
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/txt1"
              android:inputType="textAutoCorrect" android:importantForAutofill="no"
              android:hint="@string/enter_task_name" android:singleLine="true" android:selectAllOnFocus="true"
              android:focusable="true"
              android:nextFocusDown="@id/txt2"
              android:textColor="@color/black"
              android:layout_marginTop="10dp"
              android:background="@drawable/d3"
              android:padding="20dp"
              android:layout_marginStart="10dp"
              android:layout_marginEnd="10dp"
              android:layout_below="@id/tb2"
              android:elevation="10dp"
    />
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/txt2"
              android:inputType="textAutoCorrect" android:importantForAutofill="no"
              android:layout_below="@id/txt1"
              android:layout_marginTop="30dp"
              android:textColor="@color/black"
              android:hint="@string/enter_task_time_hour_minute_second" android:singleLine="true" android:selectAllOnFocus="true"
              android:background="@drawable/d3"
              android:padding="20dp"
              android:layout_marginStart="10dp"
              android:layout_marginEnd="10dp"
              android:elevation="10dp"
    />
    <FrameLayout android:id="@+id/frl"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
                 android:elevation="100dp"
                 android:visibility="gone"
    >
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TimePicker android:layout_width="wrap_content" android:layout_height="wrap_content"

                        android:layout_margin="5dp"
                        android:elevation="20dp"
                        android:id="@+id/tp"


            />
            <Button
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="Done"
                    android:textColor="@color/white"
                    android:layout_gravity="end"
                    android:id="@+id/done"
                    android:layout_margin="10dp"
                    android:background="@drawable/b1"/>
        </LinearLayout>
    </FrameLayout>
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/txt3"
              android:inputType="textAutoCorrect" android:importantForAutofill="no"
              android:layout_below="@id/txt2"
              android:layout_marginTop="30dp"
              android:textColor="@color/black"
              android:hint="@string/enter_description" android:singleLine="true" android:selectAllOnFocus="true"
              android:background="@drawable/d3"
              android:padding="20dp"
              android:layout_marginStart="10dp"
              android:layout_marginEnd="10dp"
              android:elevation="10dp"
    />
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/txt3"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="17dp"
            android:maxHeight="40dp"
            android:minHeight="40dp"
            android:text="@string/save"
            android:background="@drawable/d5"
            android:textColor="@color/black"
            android:id="@+id/save"
            style="?android:selectableItemBackgroundBorderless"/>

</RelativeLayout>